--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,12 +3,13 @@
 @tailwind utilities;
 
 body {
-  color: rgb(var(--foreground-rgb));
+  margin: 0;
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  color: rgb(var(--foreground-rgb));
 }
 
