chore: implement grid lines, install @gsap/react

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,5 +11,10 @@ body {
     )
     rgb(var(--background-start-rgb));
   color: rgb(var(--foreground-rgb));
+  overflow-x: hidden;
+}
+
+.line-width {
+  width: 0.25px;
 }
 
