--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,3 +28,17 @@
     gap: 40px;
   }
 }
+
+.un {
+  padding-bottom: 0.5px;
+  background-image: linear-gradient(darkgreen 0 0);
+  background-position: 0 100%;
+  background-size: 0% 2px;
+  background-repeat: no-repeat;
+  transition: background-size 0.5s, background-position 0s 0.5s;
+}
+
+.un:hover {
+  background-position: 100% 100%;
+  background-size: 100% 2px;
+}
