--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,7 +31,7 @@
 
 .un {
   padding-bottom: 0.5px;
-  background-image: linear-gradient(darkgreen 0 0);
+  background-image: linear-gradient(#046c4e 0 0);
   background-position: 0 100%;
   background-size: 0% 1.5px;
   background-repeat: no-repeat;
@@ -39,6 +39,20 @@
 }
 
 .un:hover {
+  background-position: 100% 100%;
+  background-size: 100% 1.5px;
+}
+
+.un-white {
+  padding-bottom: 0.5px;
+  background-image: linear-gradient(white 0 0);
+  background-position: 0 100%;
+  background-size: 0% 1.5px;
+  background-repeat: no-repeat;
+  transition: background-size 0.5s, background-position 0s 0.5s;
+}
+
+.un-white:hover {
   background-position: 100% 100%;
   background-size: 100% 1.5px;
 }
