--- a/src/components/stairs/styles.scss
+++ b/src/components/stairs/styles.scss
@@ -12,7 +12,7 @@
       position: relative;
       height: 100%;
       width: 100%;
-      background-color: #66cc8a;
+      background-color: #046c4e;
     }
   }
   .transition-background {
