chore: add stairs to project update page, fix: redo projects pg

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -29,6 +29,14 @@
   }
 }
 
+.primary-text {
+  color: #853d35;
+}
+
+.secondary-text {
+  color: #853d35;
+}
+
 .un {
   padding-bottom: 0.5px;
   background-image: linear-gradient(#046c4e 0 0);
